[package]
name = "haoscli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log="0.4.17"
env_logger="0.9.0"
toml = "0.5.9"
thiserror = "1.0.32"
futures = "0.3.21"
async-std = "1.12.0"
tokio = {version = "1.20.1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.142", features = ["derive"]}
serde_json = "1.0"
clap = { version = "3.2.16", features = ["derive", "cargo"] }
